# veteranVR

./: .gitignore  .pyrightconfig.json  COMPARISON_TO_ROOKIE.md  README.md  agentic_harness_documentation.md  get_to_feature_parity.md  implement_youtube_feature.md  package-lock.json  remote_files.json
desktop/: Cargo.toml  README.md  plan_to_binary.md
desktop/frontend/: index.html  ipc-contract.mjs  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
desktop/frontend/src/: App.tsx  bindings.ts  boot-error.js  main.tsx  types.ts
desktop/frontend/src/components/Downloads/: DownloadItem.module.css  DownloadItem.tsx
desktop/frontend/src/components/views/: Backups.module.css  Backups.tsx  Diagnostics.tsx  Downloads.module.css  Downloads.tsx  Installed.module.css  Installed.tsx  Library.module.css  Library.tsx  Wireless.module.css  Wireless.tsx
desktop/frontend/src/context/: AppContext.tsx
desktop/frontend/src/lib/: contract.ts
desktop/frontend/src/services/: api.ts
desktop/frontend/src/styles/: global.css  main.css
desktop/frontend/src/test/: mock-tauri.ts
desktop/frontend/tests/: regression.spec.ts
desktop/scripts/: build-all.sh  build.sh  download-binaries.sh
desktop/src/: bindings.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  logger.rs  main.rs
desktop/src-tauri/src/ipc/: commands.rs
desktop/src-tauri/src/models/: device.rs  game.rs  mod.rs  responses.rs  settings.rs
desktop/src-tauri/src/services/: adb.rs  binary_paths.rs  catalog.rs  config.rs  download.rs  install.rs  rclone.rs
desktop/src-tauri/tests/: integration_test.rs  service_tests.rs
veteran-desktop/: Cargo.toml  LICENSE  tsc
veteran-desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json
veteran-desktop/frontend/src/: App.module.css  App.tsx  boot-error.js  vite-env.d.ts
veteran-desktop/frontend/src/components/Downloads/: DownloadItem.tsx
veteran-desktop/frontend/src/components/views/: Diagnostics.module.css  Downloads.tsx  Installed.module.css  Installed.tsx  (+2 more)
veteran-desktop/frontend/src/context/: AppContext.tsx
veteran-desktop/frontend/src/hooks/: useInternalLogs.ts
veteran-desktop/frontend/src/services/: api.ts
veteran-desktop/frontend/tests/: baseline.spec.ts
veteran-desktop/scripts/: build.sh  download-binaries.sh
veteran-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
veteran-desktop/src-tauri/.cargo/: config.toml
veteran-desktop/src-tauri/capabilities/: default.json
veteran-desktop/src-tauri/icons/: icon.icns
veteran-desktop/src-tauri/src/: lib.rs
veteran-desktop/src-tauri/src/ipc/: commands.rs
veteran-desktop/src-tauri/src/models/: config.rs  device.rs  responses.rs
veteran-desktop/src-tauri/src/services/: adb.rs  download.rs  extract.rs  install.rs  mod.rs  settings.rs
veteran-desktop/src-tauri/tests/: ipc_tests.rs  service_tests.rs
(+96 files in other folders)
