[workspace]
members = ["src-tauri"]
resolver = "2"


[profile.dev]
incremental = true   # keep this true for your local code
panic = "abort"      # speeds up linking by removing stack unwind tables

# The "Quant" Optimization: Speed up dependencies, strip their debug info
[profile.dev.package."*"]
opt-level = 3
debug = false
split-debuginfo = "unpacked"
strip = true         # drastically reduces link time
