[package]
name = "veteran-desktop"
version = "0.1.2"
description = "Veteran desktop shell bootstrap"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
adb_client = "3.1.0"
anyhow = "1.0.101"
base64 = "0.22.1"
csv = "1.4.0"
dirs = "6.0.0"
md5 = "0.8.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
specta = { version = "2.0.0-rc.20", features = ["derive", "function", "serde_json"] }
tauri-specta = { version = "2.0.0-rc.15", features = ["typescript"] }
specta-typescript = "0.0.9"

[dev-dependencies]
tempfile = "3.10.0"

[profile.dev]
debug = 1              # Line-tables only — much smaller debug info
split-debuginfo = "unpacked"  # Keep debug info in separate files (macOS default, explicit for clarity)

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
